kubernetes/deploy/proxies/external/home-assistant/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: hass
subsets:
  - addresses:
      - ip: 192.168.5.2
    ports:
      - port: 8123
        name: http
