kubernetes/deploy/proxies/external/home-assistant/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hass
spec:
  ports:
  - protocol: TCP
    port: 8123
    name: http
    targetPort: 8123
