kubernetes/deploy/proxies/external/home-assistant/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: hass
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`hass.vandeneede.org`)
    services:
    - name: hass
      port: 8123
